

## [Unreleased]
### Added
- [SERVICE] [FILEBEAT] Support new rc calls to check services separatly
### Fixed
- [API_PARSER] [CISCO_UMBRELLA_MANAGED_ORG] Avoid errors and crashes when no logs are available for some customer IDs
- [API_PARSER] [CARBON_BLACK] Avoid API limits of 10k logs
- [SERVICE] [FILEBEAT] Ensure config files are correctly deleted on Listener deletion
### Changed
- [API_PARSER] [CARBON_BLACK] Use v7 of APIs


## [2.21.0] - 2025-02-06
### Changed
- [API_PARSER] [NETSKOPE] Add the possiblity to retrieve 3 new kinds of logs
### Fixed
- [API_PARSER] [NETSKOPE] Remove duplicated logs
- [API_PARSER] [CATONETWORKS] Fix invalid HTML
- [API_PARSER] [WAF_CLOUDFLARE] Correctly set and use the `fields` list
- [API_PARSER] [CISCO_DUO] Avoid updating last timestamp when unecessary and add a 2-minute delay to collect


## [2.20.0] - 2025-02-04
### Added
- [API_PARSER] [CATONETWORKS] New collector
- [API_PARSER] [INFOBLOX_THREAT_DEFENSE] New collector
- [API_PARSER] [BEYONDTRUST_REPORTINGS] New collector


## [2.19.0] - 2025-01-16
### Added
- [API_PARSER] [CISCO_UMBRELLA-MANAGED-ORG] New collector
- [API_PARSER] [SENTINEL ONE SINGULARITY MOBILE] New collector
- [SYSTEM] [PKI] Add POST, PUT and DELETE requests for APIs
### Changed
- [API_PARSER] [HARFANGLAB] truncate 'rule_content' and 'process_sigma_rule_content' fields if they have more than 16384 characters
- [API_PARSER] [API_BEYONDTRUST_PRA] Add fields
- [DEPENDENCIES]
  - djongo 1.3.6.post5 -> 1.3.7 (corrected)
  - aiohttp 3.9.3 -> 3.10.5
  - aiohappyeyeballs added -> 2.4.4
  - certifi 2024.2.2 -> 2024.12.14
  - cryptography 42.0.5 -> 43.0.1
  - django 4.2.11 -> 4.2.18
  - pyopenssl 24.0.0 -> 25.0.0
  - werkzeug 3.0.1 -> 3.0.3
  - setuptools 69.1.1 -> 70.0.0
### Fixed
- [SYSTEM] [NODE] Uniformize editable fields on API and GUI
- [HTML] [NODE] Show better field errors while editing Node parameters
- [NETWORK] Avoid defining NATing routes using loopback interfaces


## [2.18.0] - 2024-12-18
### Added